[package]
name = "counter-contract"
version = "0.1.0"
authors = ["Brianna Migliaccio <migliacciobri@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-std       = "1.4.0"
cosmwasm-schema    = "1.4.0"
cw-storage-plus    = "1.1.0"
cw-utils           = "1.0.2"
osmosis-std        = "0.19.2"
prost              = { version = "0.11.9", default-features = false }
cosmwasm-storage   = "1.4.0"
thiserror          = "1.0.49"
prost-types = "0.11.9"
serde_json = "1.0.107"

[dev-dependencies]
osmosis-test-tube  = "19.2.0"