[package]
name = "cosmwasm-user-counter"
version = "0.1.0"
edition = "2021"
authors = ["Brianan Migliaccio <migliacciobri@gmail.com>"]

[dependencies]
cosmwasm-std       = "1.4.0"
cosmwasm-schema    = "1.4.0"
cw-storage-plus    = "1.1.0"

[features]
default = ["crates-io"]
crates-io = []
library    = []

[lib]
name = "cosmwasm_user_counter"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
cosmwasm-vm = "1.0"

[profile.release]
# Optimize for size.
lto = true
opt-level = "z"
codegen-units = 1